--- a/c/reemext/reemext.vcxproj.filters
+++ b/c/reemext/reemext.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="lua_string.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sql.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="reeme.cpp">
