--- a/tools/conf/linux/reeme-vhost/helloReeme.conf
+++ b/tools/conf/linux/reeme-vhost/helloReeme.conf
@@ -29,6 +29,6 @@ server {
 
     # Va runtime
     location / {
-        content_by_lua_file $document_root/index.lua;
+        content_by_lua_block { require("reeme.startup") }
     }
 }
