--- a/tools/conf/win/reeme-vhost/helloReeme.conf
+++ b/tools/conf/win/reeme-vhost/helloReeme.conf
@@ -29,6 +29,6 @@ server {
 
     # Va runtime
     location / {
-		content_by_lua_block { require("reeme.startup") }
+		content_by_lua_file startup.lua;
     }
 }
