reconsitution application module & bug fixes

--- a/c/reemext/reemext.vcxproj.filters
+++ b/c/reemext/reemext.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="lua_utf8str.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="json.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="reeme.cpp">
